--- a/README
+++ b/README
@@ -1,7 +1,14 @@
-This is our final project. The folder futuristic_city contains the source code 
+# Procedural Futuristic City
+This is our final project for CPSC 479. We created a procedural futuristic city complete with Worley noise procedural textures and boids flying around.
+
+## Structure
+The folder futuristic_city contains the source code 
 for a Blender add-on that was our midterm project (with some modifications). 
 You can go to futuristic_city/README for more detailed instructions.
 
 The folder voronoi contains code for the Worley noise procedural texture. You 
 can go to voronoi/README for more detailed instructions on how to run the code 
 and use the texture in Blender.
+
+## Authors
+Yifei Shen and Zacharie Sciamma
